New page /livre and fix layout product page and promo code added

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint",
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "db:migrate-to-vps": "tsx prisma/migrate-data.ts",
+    "db:export": "./migrate-db-to-vps.sh"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
